# ArchitectureFrame

./: build.gradle  config.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  CMakeLists2.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: encrypt.cpp  md5.cpp  md5.h  video_player.c
app/src/main/cpp/head/: com_app_rzm_utils_EncryptUtils.h
app/src/main/cpp/include/ffmpeg/libavcodec/: avcodec.h  vdpau.h
app/src/main/cpp/include/ffmpeg/libavutil/: avutil.h  opt.h
app/src/main/java/com/app/rzm/: MyApplication.java
app/src/main/java/com/app/rzm/aop/: BehaviorAspect.java  CalculateConsume.java  NetworkCheck.java
app/src/main/java/com/app/rzm/bean/: CommonResponse.java
app/src/main/java/com/app/rzm/service/: DaemonActivity.java  JobWakeUpService1.java  JobWakeUpService2.java
app/src/main/java/com/app/rzm/test/: TestAOPActivity.java  TestActivity.java  TestBehaviorActivity.java  TestBsPatchActivity.java  TestCompressImageActivity.java  TestDaemonServiceActivity.java  TestDbUpgradeActivity.java  TestFFmpegActivity.java  TestFixDexActivity.java  TestHookActivity.java  TestHookRegisteredActivity.java  TestHookUnRegisteredActivity.java  TestHttpUtilsActivity.java  TestMyRecyclerViewActivity.java  TestParamsEncryptActivity.java  TestProxyActivity.java  TestRxjavaActivity.java  TestSImmerBarActivity.java  TestSimpleImageLoaderActivity.java  TestSkinActivity.java  TestSnapHelperActivity.java  TestWebViewActivity.java
app/src/main/java/com/app/rzm/test/source/: TestGlideSourceActivity.java  TestViewDrawActivity.java  TestViewTouchActivity.java
app/src/main/java/com/app/rzm/test/view/: TestTouchView.java  TestTouchViewGroup.java
app/src/main/java/com/app/rzm/ui/: HomeActivity.java
app/src/main/java/com/app/rzm/ui/clip/: ChooseVideoAdapter.java  ExtractVideoInfoUtil.java  VideoAdapter.java
app/src/main/java/com/app/rzm/ui/fragment/: FindFragment.java
app/src/main/java/com/app/rzm/ui/selectimage/: ChoosePictureActivity.java  ChoosePictureAdapter.java
app/src/main/java/com/app/rzm/utils/: EncryptUtils.java  FFmpegUtils.java  GlideImageLoader.java
app/src/main/res/drawable/: selector_item_pressed.xml
app/src/main/res/layout/: activity_hook_test.xml  activity_test_aop.xml  activity_test_behavior.xml  activity_test_daemon_service.xml  activity_test_db_upgrade.xml  activity_test_ffmpeg.xml  activity_test_fix_dex.xml  activity_test_glide_source.xml  activity_test_hook_registered.xml  activity_test_http_utils.xml  activity_test_params_encrypt.xml  activity_test_rxjava.xml  activity_test_simmer_bar.xml  activity_test_simple_image_loader.xml  activity_test_snap_helper.xml  activity_test_view_draw.xml  activity_test_view_touch.xml  activity_test_web_view.xml  activity_unrigistered.xml  item_normal.xml  item_test_snap_helper.xml  media_chooser_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
commonlibrary/: README.txt  build.gradle
commonlibrary/src/main/: AndroidManifest.xml
commonlibrary/src/main/assets/: updateXml.xml
commonlibrary/src/main/java/com/example/renzhenming/appmarket/test/: GuardAidl.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/: BaseApplication.java  ExceptionCrashHandler.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/behavior/: FloatingActionButtonBehevior.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/db/: DaoSupportFactory.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/db/upgrade/: CreateDb.java  CreateVersion.java  FileUtil.java  SqlConstant.java  UpdateDb.java  UpdateDbXml.java  UpdateManager.java  UpdateStep.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/execption/: ExceptionCrashHandler.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/fix/: FixDexManager.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/global/: BaseApplication.java  BaseSkinActivity.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/guard/: DaemonActivity.java  GuardAppManager.java  GuardService1.java  GuardService2.java  JobWakeUpService1.java  JobWakeUpService2.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/hook/: HookActivityUtil.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/http/base/: HttpCacheUtils.java  HttpUtils.java  ICallBack.java  IHttpEngine.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/image/: BitmapUtils.java  LocalCacheUtils.java  MemoryCacheUtils.java  NetCacheUtils.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/imageloader/cache/: BitmapCache.java  MemoryCache.java  MemoryDiskCache.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/imageloader/config/: DisplayConfig.java  ImageLoaderConfig.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/imageloader/disk/: DiskCache.java  DiskLruCache.java  StrictLineReader.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/imageloader/loader/: AbstractLoader.java  Loader.java  (+4 more)
commonlibrary/src/main/java/com/rzm/commonlibrary/general/plugin/: PluginManager.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/thread/: DownloadThread.java  ThreadPoolManager.java
commonlibrary/src/main/java/com/rzm/commonlibrary/general/web/: WebViewActivity.java
commonlibrary/src/main/java/com/rzm/commonlibrary/utils/: GlideUtils.java  JsonUtils.java  LogUtils.java  Md5Util.java
commonlibrary/src/main/res/layout/: activity_web_view.xml
commonlibrary/src/main/res/values/: dimens.xml  style.xml
ffmpeglibrary/: CMakeLists.txt  build.gradle
ffmpeglibrary/src/androidTest/java/com/rzm/ffmpeglibrary/: ExampleInstrumentedTest.java
ffmpeglibrary/src/main/: AndroidManifest.xml
ffmpeglibrary/src/main/cpp/: ffmpeg_player.c
ffmpeglibrary/src/main/cpp/include/owner/: com_rzm_ffmpeglibrary_FFmpegUtils.h
ffmpeglibrary/src/main/java/com/rzm/ffmpeglibrary/: FFmpegUtils.java
ffmpeglibrary/src/test/java/com/rzm/ffmpeglibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
